@@ -198,7 +198,7 @@ public abstract class AbstractCalculator implements Calculator {
 		String dupeFreeName;
 
 		if (dupeCount != 0) {
-			int dupeCountIndex = name.lastIndexOf(new Integer(dupeCount).toString());
+			int dupeCountIndex = name.lastIndexOf(Integer.valueOf(dupeCount).toString());
 
 			if (dupeCountIndex == -1)
 				dupeFreeName = new String(name);
