@@ -133,6 +133,6 @@ public class EdgeOpacityProp extends AbstractVisualProperty {
 	 * @return  DOCUMENT ME!
 	 */
 	public Object getDefaultAppearanceObject() {
-		return new Integer(255);
+		return Integer.valueOf(255);
 	}
 }
