@@ -137,6 +137,6 @@ public class EdgeSourceArrowOpacityProp extends AbstractVisualProperty {
 	 * @return  DOCUMENT ME!
 	 */
 	public Object getDefaultAppearanceObject() {
-		return new Integer(255); 
+		return Integer.valueOf(255); 
 	}
 }
