@@ -144,6 +144,6 @@ public class NodeOpacityProp extends AbstractVisualProperty {
 	 * @return  DOCUMENT ME!
 	 */
 	public Object getDefaultAppearanceObject() {
-		return new Integer(255);
+		return Integer.valueOf(255);
 	}
 }
