@@ -94,8 +94,8 @@ public class LinearNumberToNumberInterpolatorTest extends TestCase {
 	public void testFunction() throws Exception {
 		LinearNumberToNumberInterpolator li = new LinearNumberToNumberInterpolator();
 
-		Integer lowerRange = new Integer(2);
-		Integer upperRange = new Integer(3);
+		Integer lowerRange = Integer.valueOf(2);
+		Integer upperRange = Integer.valueOf(3);
 		double frac = 0.41;
 		Object returnVal = li.getRangeValue(frac, lowerRange, upperRange);
 
